--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1071,7 +1071,7 @@ body {
 }
 .user-manage a.view-all-journal {
 	float: left;
-	margin-right: 30px;
+	margin-right: 15px;
 }
 .user-manage .user-dropdown {
 	float: left;
@@ -1079,14 +1079,34 @@ body {
 .user-manage .user-dropdown img {
 	float: left;
 	margin-right: 15px;
-	margin-top: 20px;
+	margin-top: 22px;
+}
+.user-manage .user-dropdown .dropdown-link {
+	background: url(images/arrow-dropdown.png) no-repeat bottom right;
+	padding-right: 20px;
 }
 .user-manage .user-dropdown ul {
 	position: absolute;
 	top: 80px;
 	right: 0;
-	width: 200px;
-	z-index: 999;
+	width: 100px;
+	z-index: 10;
+	list-style: none;
+	margin: 0;
+}
+.user-manage .user-dropdown ul li {
+	line-height: 1.5em;
+	text-align: right;
+	width: 100px;
+	padding: 5px;
+	padding: 0;
+	border-bottom: 1px solid #ccc;
+}
+.user-manage .user-dropdown ul li a {
+	background: #FFF;
+	display: block;
+	width: 90px;
+	padding: 5px;
 }
 /* Page layout
 ----------------------------------------------------------------*/
@@ -1102,7 +1122,11 @@ body {
 	background-color: transparent;
 	padding: 0;
 }
-
+h1.page-title {
+	width: 960px;
+	margin: 30px auto;
+	font-size: 30px;
+}
 /* Form Style
 ----------------------------------------------------------------*/
 #open-journal-login-form,
